[gd_scene load_steps=4 format=3 uid="uid://dyxsfrb3r14q1"]

[ext_resource type="Script" path="res://level.gd" id="1_7ov1j"]
[ext_resource type="Script" path="res://MultiplayerSpawner.gd" id="1_lq8yg"]
[ext_resource type="PackedScene" uid="uid://b5yyvybc872jf" path="res://player.tscn" id="2_jy1ag"]

[node name="Level" type="Node"]
script = ExtResource("1_7ov1j")

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
spawn_path = NodePath(".")
script = ExtResource("1_lq8yg")
player_scene = ExtResource("2_jy1ag")

[node name="ColorRect" type="ColorRect" parent="."]
offset_top = 311.0
offset_right = 1152.0
offset_bottom = 648.0

[node name="Button" type="Button" parent="."]
offset_left = 444.0
offset_top = 1.0
offset_right = 662.0
offset_bottom = 59.0
text = "Print Player Data"

[node name="Hide_Or_Play" type="VBoxContainer" parent="."]
offset_right = 40.0
offset_bottom = 40.0

[node name="Hide" type="Button" parent="Hide_Or_Play"]
layout_mode = 2
text = "I am hiding..."

[node name="Play" type="Button" parent="Hide_Or_Play"]
layout_mode = 2
text = "I am playing!"

[node name="Granade" type="VBoxContainer" parent="."]
visible = false
offset_right = 40.0
offset_bottom = 40.0

[node name="Grab" type="Button" parent="Granade"]
layout_mode = 2
text = "I am grabbing the on the way to the shelter!"

[node name="Leave" type="Button" parent="Granade"]
layout_mode = 2
text = "I am staying put and not toching anything!"

[node name="Game" type="VBoxContainer" parent="."]
visible = false
offset_right = 40.0
offset_bottom = 40.0

[node name="Rock" type="Button" parent="Game"]
layout_mode = 2
text = "I choose Rock!"

[node name="Paper" type="Button" parent="Game"]
layout_mode = 2
text = "I choose Paper!"

[node name="Scissors" type="Button" parent="Game"]
layout_mode = 2
text = "I choose Scissors!"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Hide_Or_Play/Hide" to="." method="_on_hide_pressed"]
[connection signal="pressed" from="Hide_Or_Play/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Granade/Grab" to="." method="_on_grab_pressed"]
[connection signal="pressed" from="Granade/Leave" to="." method="_on_leave_pressed"]
[connection signal="pressed" from="Game/Rock" to="." method="_on_rock_pressed"]
[connection signal="pressed" from="Game/Paper" to="." method="_on_paper_pressed"]
[connection signal="pressed" from="Game/Scissors" to="." method="_on_scissors_pressed"]
